# TipTilt

./: CMakeLists.txt  CMakeLists1.txt
JustTT/: CMakeCache.txt  TipTilt.cpp  TipTilt.hpp  cmake_install.cmake  wasd
code/: CMakeLists.txt
code/JustTT/: CMakeLists.txt  Makefile  TipTilt.cpp  main.cpp
code/src/: CameraStreamHandling.cpp
include/: CameraAndImageHandling.hpp  CameraStreamHandler.hpp  CameraStreamHandling.hpp  CameraThread.hpp  DisplayControl.hpp  MainFrame.h  StreamPlayer.hpp  SystemControl.hpp  TTGui.hpp  TipTilt.hpp  TipTiltControl.hpp  cxxopts.h  frameProcess.hpp  gui.hpp  main.hpp  wxCameraStreamHandler.hpp  wxStreamPlayer.hpp  wxStreamThread.hpp
old/: CameraStreamHandling.cpp  CameraStreamHandling.hpp  MainFrame.cpp  MainFrame.h  TipTilt.hpp  gui.cpp  main.cpp
src/: CameraAndImageHandling.cpp  CameraStreamHandler.cpp  CameraStreamHandling.cpp  CameraThread.cpp  CaptureTest.cpp  DisplayControl.cpp  GetCentroid.cpp  MainFrame.cpp  ProcessFrameTest.cpp  SerialTest.cpp  StreamPlayer.cpp  SystemControl.cpp  TTGui.cpp  TipTilt.cpp  TipTiltControl.cpp  Values.txt  frameProcess.cpp  gui.cpp  main.cpp  wxCameraStreamHandler.cpp  wxStreamPlayer.cpp  wxStreamThread.cpp
